# hyperDL

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  publish.yml
build_scripts/: build_exe.py
docs/: API.md
examples/: __init__.py  batch_download.py  config_demo.py  multithread_test.py  simple_download.py  verify_and_proxy.py
hyperdownloader/: __init__.py  api_server.py  cli.py  config_manager.py  core.py  downloader.py  enums.py  models.py  scheduler.py  segment.py  utils.py
tests/: __init__.py  test_core.py  test_models.py  test_utils.py
tools/: DropDownload.ps1  drag_drop_downloader.py  web_demo.html  拖拽下载.bat
