[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdownloader-core"
version = "1.0.4"
description = "高性能多线程下载引擎 — 完全解耦，不依赖任何 GUI 框架"
readme = "README.md"
long_description_content_type = "text/markdown"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["download", "downloader", "multi-thread", "http", "concurrent"]
authors = [
    {name = "HyperDownloader Team"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
socks = ["PySocks>=1.7.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/cyqmq/hyperDL"
Repository = "https://github.com/cyqmq/hyperDL"
"Bug Tracker" = "https://github.com/cyqmq/hyperDL/issues"

[tool.setuptools.packages.find]
include = ["hyperdownloader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
